Complete git-diff task.

--- a/detekt-cli/src/main/resources/default-detekt-config.yml
+++ b/detekt-cli/src/main/resources/default-detekt-config.yml
@@ -18,6 +18,7 @@ processors:
 console-reports:
   active: true
   exclude:
+    - 'ShortIssuesReport'
   #  - 'ProjectStatisticsReport'
   #  - 'ComplexityReport'
   #  - 'NotificationReport'
